fix: popup scrollbar issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,8 +9,9 @@
   * {
     @apply border-border outline-ring/50;
   }
-  html {
+  body {
     width: 500px;
+    overflow-x: hidden;
   }
   body {
     @apply bg-background text-foreground font-sans;
